// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders For Review queue with flags 1`] = `
<div
  className="MainLayout-root"
  data-testid="moderate-main-container"
>
  <main
    className="Moderate-main"
  >
    <div
      className="ForReviewQueueRoute-background"
    />
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-double"
    >
      <table
        className="Table-root ForReviewQueueRoute-table Table-fullWidth"
      >
        <thead
          className="TableHead-root"
        >
          <tr
            className="TableRow-root"
          >
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header"
            >
              Time
            </th>
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header"
            >
              Comment
            </th>
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header"
            >
              Reported by
            </th>
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header"
            >
              Reason
            </th>
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header"
            >
              Description
            </th>
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header TableCell-alignCenter"
            >
              Reviewed
            </th>
          </tr>
        </thead>
        <tbody
          className="TableBody-root"
        >
          <tr
            className="TableRow-root TableRow-body"
            data-testid="moderate-flag-comment-flag-1"
          >
            <td
              className="TableCell-root ForReviewQueueRowContainer-timeColumn TableCell-body"
            >
              06/01/21, 02:21 PM
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              <div
                className="ForReviewQueueRowContainer-commentContainer"
              >
                <a
                  className="TextLink-root"
                  href="/admin/moderate/comment/comment-0"
                  onClick={[Function]}
                >
                  This is the last random sentence I will 
                </a>
              </div>
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              <div
                className="ForReviewQueueRowContainer-reportedByContainer"
                title="Isabelle"
              >
                Isabelle
              </div>
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              Abusive
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-descriptionColumn TableCell-body"
            >
              this is why
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-reviewedColumn TableCell-body TableCell-alignCenter"
            >
              <button
                aria-label="Mark as reviewed"
                className="BaseButton-root ReviewButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              />
            </td>
          </tr>
          <tr
            className="TableRow-root TableRow-body"
            data-testid="moderate-flag-comment-flag-no-details-1"
          >
            <td
              className="TableCell-root ForReviewQueueRowContainer-timeColumn TableCell-body"
            >
              06/01/21, 02:21 PM
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              <div
                className="ForReviewQueueRowContainer-commentContainer"
              >
                <a
                  className="TextLink-root"
                  href="/admin/moderate/comment/comment-0"
                  onClick={[Function]}
                >
                  Don't fool with me
                </a>
              </div>
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              <div
                className="ForReviewQueueRowContainer-reportedByContainer"
                title="Isabelle"
              >
                Isabelle
              </div>
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              Abusive
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-descriptionColumn TableCell-body"
            >
              <span
                className="NotAvailable-root"
              >
                None
              </span>
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-reviewedColumn TableCell-body TableCell-alignCenter"
            >
              <button
                aria-label="Mark as reviewed"
                className="BaseButton-root ReviewButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              />
            </td>
          </tr>
          <tr
            className="TableRow-root TableRow-body"
            data-testid="moderate-flag-comment-flag-deleted-1"
          >
            <td
              className="TableCell-root ForReviewQueueRowContainer-timeColumn TableCell-body"
            >
              06/01/21, 02:21 PM
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              <div
                className="ForReviewQueueRowContainer-commentContainer"
              >
                <a
                  className="TextLink-root"
                  href="/admin/moderate/comment/comment-0"
                  onClick={[Function]}
                >
                  <span
                    className="NotAvailable-root"
                  >
                    No text content
                  </span>
                </a>
              </div>
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              <div
                className="ForReviewQueueRowContainer-reportedByContainer"
                title="Isabelle"
              >
                Isabelle
              </div>
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              Abusive
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-descriptionColumn TableCell-body"
            >
              Looks abusive
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-reviewedColumn TableCell-body TableCell-alignCenter"
            >
              <button
                aria-label="Mark as reviewed"
                className="BaseButton-root ReviewButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              />
            </td>
          </tr>
          <tr
            className="TableRow-root TableRow-body"
            data-testid="moderate-flag-comment-flag-reviewed-1"
          >
            <td
              className="TableCell-root ForReviewQueueRowContainer-timeColumn TableCell-body"
            >
              06/01/21, 02:21 PM
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              <div
                className="ForReviewQueueRowContainer-commentContainer"
              >
                <a
                  className="TextLink-root"
                  href="/admin/moderate/comment/comment-0"
                  onClick={[Function]}
                >
                  Don't fool with me
                </a>
              </div>
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              <div
                className="ForReviewQueueRowContainer-reportedByContainer"
                title="Isabelle"
              >
                Isabelle
              </div>
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-column TableCell-body"
            >
              Abusive
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-descriptionColumn TableCell-body"
            >
              Looks abusive
            </td>
            <td
              className="TableCell-root ForReviewQueueRowContainer-reviewedColumn TableCell-body TableCell-alignCenter"
            >
              <button
                aria-label="Reviewed"
                className="BaseButton-root ReviewButton-root ReviewButton-checked ReviewButton-readOnly"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-xs ReviewButton-icon"
                >
                  done
                </i>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </main>
</div>
`;

exports[`renders empty For Review queue 1`] = `
<div
  className="MainLayout-root"
  data-testid="moderate-main-container"
>
  <main
    className="Moderate-main"
  >
    <div
      className="ForReviewQueueRoute-background"
    />
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-double"
    >
      <table
        className="Table-root ForReviewQueueRoute-table Table-fullWidth"
      >
        <thead
          className="TableHead-root"
        >
          <tr
            className="TableRow-root"
          >
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header"
            >
              Time
            </th>
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header"
            >
              Comment
            </th>
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header"
            >
              Reported by
            </th>
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header"
            >
              Reason
            </th>
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header"
            >
              Description
            </th>
            <th
              className="TableCell-root ForReviewQueueRoute-column TableCell-header TableCell-alignCenter"
            >
              Reviewed
            </th>
          </tr>
        </thead>
        <tbody
          className="TableBody-root"
        />
      </table>
    </div>
  </main>
</div>
`;
